--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ SHELL = /bin/bash
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
-LDFLAGS=
+LDFLAGS=-L/usr/$${target}/bin
 CPPFLAGS=-Wdate-time
 CFLAGS=-O3 -g -O2 -Wformat -Werror=format-security
 CXXFLAGS=-O3 --std=c++11
@@ -63,6 +63,7 @@ override_dh_clean:
 override_dh_auto_configure:
 	for target in $(TARGETS) ; \
 	do \
+		$(EXECUTE) eval echo \$$LDFLAGS; \
 		mkdir -p build-$$target && \
 		pushd build-$$target && \
 		$(EXECUTE) /usr/bin/prepare-winedllpath && \
